2004-08-06  Martin Blom  <martin@blom.org>

	* ahi.device: Applied even more OS4 patches from Davy
	Wentzler. Thanks!

2004-08-05  Martin Blom  <martin@blom.org>

	* Released audio 5.18.

	* emu10kx.audio: Remade the routing once again. Tried to make the
	routing code work on Audigy. Testing required.

2004-08-04  Martin Blom  <martin@blom.org>

	* Added the string "\nAnnotation" to all prefs catalogs'
	msgProperties string. Real translations are more than
	welcome. [Michael Malyshev]

	* Pass CPU option to linker when building. [Gunther Nikl]

2004-08-02  Martin Blom  <martin@blom.org>

	* Added updated Russion translations by Michael Malyshev. Thanks!

	* emu10kx.audio: Don't print debug info if no cards found. [Harry
	Sintonen]

2004-07-27  Martin Blom  <martin@blom.org>

	* Released AHI 5.13.

	* Released emu10kx.audio 5.17.

	* Released ahi.device 5.49.

	* ahi.device: Added backward mixing in 7.1 modes.

	* ahi.device: Fixed a couple of bugs in the 7.1 code.

	* emu10kx.audio: Replaced the EMU10k1 routing completely. Disabled
	most of the patch manager. Somebody needs to fix it for Audigy
	cards.

	* emu10kx.audio: Added 5.1 multichannel support for Live!
	cards. And there was much rejoicing.

2004-07-26  Martin Blom  <martin@blom.org>

	* Examples/Low-level/Test-7.1: Added a 7.1 test example.

	* AROS, DEVICE, EMU10KX, FILESAVE, PAULA, TOCCATA, VOID,
	WAVETOOLS (mode files): Enabled panning for all mono modes.

	* Released void.audio 5.8.

	* void.audio: Added a comment about locking the actual hardware in
	AHIsub_AllocAudio().

	* void.audio: Added 7.1 "support".

2004-07-25  Martin Blom  <martin@blom.org>

	* Released AHI preferences 5.13.

	* Released ahi.device 5.48.

	* AHI preferences: Added selection of volume scaling mode. And
	there was much rejoicing.

	* ahi.device: Implemented a couple of alternatives to that
	horrible "safe scaling" thing. [Daniel Westerberg, Hubert Maier
	and a thousand others]

2004-07-07  Martin Blom  <martin@blom.org>
